<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".presentation.main.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/news_feed_stack_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loading_view"
        style="?android:attr/progressBarStyle"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error"
        style="@style/Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/retry_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/retry_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/retry_button_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/skip_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/skip_content_description"
        android:elevation="4dp"
        android:src="@drawable/ic_skip_64"
        app:layout_constraintBottom_toBottomOf="@+id/buttons_block"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@+id/buttons_block"
        app:layout_constraintRight_toLeftOf="@+id/like_button" />

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/like_content_description"
        android:elevation="4dp"
        android:src="@drawable/ic_like_64"
        app:layout_constraintBottom_toBottomOf="@+id/skip_button"
        app:layout_constraintLeft_toRightOf="@+id/skip_button"
        app:layout_constraintRight_toRightOf="@+id/buttons_block"
        app:layout_constraintTop_toTopOf="@+id/skip_button" />

    <View
        android:id="@+id/buttons_block"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/bottom_background_gradient"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
