<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_card_elevation16"
    tools:parentTag="android.support.constraint.ConstraintLayout">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/avatar_content_description"
        app:layout_constraintBottom_toTopOf="@+id/attachments_block"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:src="@drawable/ic_like_36" />

    <TextView
        android:id="@+id/name"
        style="@style/Text14.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintLeft_toRightOf="@+id/avatar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="Nastya Shmakova" />

    <TextView
        android:id="@+id/date"
        style="@style/Text12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/date_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="09 Nov 2018" />

    <ru.shmakova.vk.presentation.ui.SquareView
        android:id="@+id/attachments_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        tools:src="@drawable/ic_like_36" />

    <ru.shmakova.vk.presentation.ui.LinePageIndicator
        android:id="@+id/line_page_indicator"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:transitionName="page_indicator_transition"
        app:gapWidth="4dp"
        app:layout_constraintEnd_toEndOf="@+id/attachments_block"
        app:layout_constraintStart_toStartOf="@+id/attachments_block"
        app:layout_constraintTop_toTopOf="@+id/attachments_block"
        app:selectedColor="@color/page_indicator_selected_color"
        app:strokeWidth="2dp"
        app:unselectedColor="@color/page_indicator_unselected_color" />

    <android.support.v4.view.ViewPager
        android:id="@+id/attachments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/attachments_block"
        app:layout_constraintLeft_toLeftOf="@+id/attachments_block"
        app:layout_constraintRight_toRightOf="@+id/attachments_block"
        app:layout_constraintTop_toTopOf="@+id/attachments_block" />

    <View
        android:id="@+id/prev_button"
        android:layout_width="75dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/attachments_block"
        app:layout_constraintLeft_toLeftOf="@+id/attachments_block"
        app:layout_constraintTop_toTopOf="@+id/attachments_block" />

    <View
        android:id="@+id/next_button"
        android:layout_width="75dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/attachments_block"
        app:layout_constraintRight_toRightOf="@+id/attachments_block"
        app:layout_constraintTop_toTopOf="@+id/attachments_block" />

    <Button
        android:id="@+id/like_badge"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_like_elevation16"
        android:elevation="4dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:rotation="-4"
        android:text="@string/like_badge_text"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skip_badge"
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_skip_elevation16"
        android:elevation="4dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:rotation="4"
        android:text="@string/skip_badge_text"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        style="@style/Text15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:lineSpacingExtra="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/avatar"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/attachments_block"
        app:layout_constraintVertical_weight="1"
        tools:text="Text" />

</merge>
